# aws-lambda-log-filter

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md
.github/workflows/: build-and-upload-release-assets.yaml  coverage.yml  create-release.yml  release.yml  upload-artifacts.yaml
benchmark/: README.md  samconfig.toml  template.yaml  validate.sh
benchmark/nodejs/: package.json
benchmark/nodejs/src/: index.mjs
scripts/: entry.sh
src/: main.rs  transformer.rs
